resources/dsaas-stg/dsaas-preview/admin-console.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: admin-console
  name: admin-console
spec:
  host: admin-console.api.prod-preview.openshift.io
  port:
    targetPort: "8089"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: admin-console
    weight: 100
  wildcardPolicy: None
